# proteaaudio

./: .gitignore  CHANGELOG.md  ProteaAudio.chs  README.md  play.hs  proteaaudio.cabal  stack.yaml
Sound/: ProteaAudio.chs
cbits/: RtAudio.cpp  RtAudio.h  proAudio.cpp  proAudio.h  proAudioRt.cpp  proAudioRt.h  proAudioSdl.cpp  proAudioSdl.h  proteaaudio_binding.cpp  proteaaudio_binding.h  stb_vorbis.c
chs/: Binding.chs
example/: play.hs
proteaaudio/: CHANGELOG.md  LICENSE  README.md  proteaaudio.cabal  stack.yaml
proteaaudio-sdl/: CHANGELOG.md  README.md  proteaaudio-sdl.cabal  stack.yaml
proteaaudio-sdl/Sound/ProteaAudio/: SDL.chs
proteaaudio-sdl/cbits/: proAudioSdl.cpp  proteaaudio_binding.cpp  proteaaudio_binding.h
proteaaudio-sdl/example/: play.hs
proteaaudio/Sound/: ProteaAudio.chs
proteaaudio/cbits/: proAudioRt.cpp  proAudioRt.h
proteaaudio/example/: play.hs
