Name:                proteaaudio
Version:             0.6.2
Synopsis:            A wrapper for the proteaaudio library.
Description:         A wrapper for the proteaaudio library. http://viremo.eludi.net/proteaAudio/
License:             BSD3
License-file:        LICENSE
Author:              Csaba Hruska
Maintainer:          csaba (dot) hruska (at) gmail (dot) com
Stability:           Experimental
Category:            Sound
Tested-With:         GHC == 7.8.3
Cabal-Version:       >= 1.2
Build-Type:          Simple

Extra-Source-Files:
  cbits/include/asio.cpp
  cbits/include/asio.h
  cbits/include/asiodrivers.cpp
  cbits/include/asiodrivers.h
  cbits/include/asiodrvr.h
  cbits/include/asiolist.cpp
  cbits/include/asiolist.h
  cbits/include/asiosys.h
  cbits/include/dsound.h
  cbits/include/ginclude.h
  cbits/include/iasiodrv.h
  cbits/include/iasiothiscallresolver.cpp
  cbits/include/iasiothiscallresolver.h
  cbits/include/soundcard.h
  cbits/RtAudio.cpp
  cbits/RtAudio.h
  cbits/RtError.h
  cbits/proAudio.cpp
  cbits/proAudio.h
  cbits/proAudioRt.cpp
  cbits/proAudioRt.h
  cbits/proteaaudio_binding.cpp
  cbits/proteaaudio_binding.h
  cbits/stb_vorbis.c

  Sound/ProteaAudio.chs

Library
  Build-Depends:        base >= 4 && < 5

  Build-tools:          c2hs
  Exposed-Modules:      Sound.ProteaAudio
  Hs-Source-Dirs:       .
  Extensions:           ForeignFunctionInterface

  C-Sources:            cbits/RtAudio.cpp
                        cbits/proAudio.cpp
                        cbits/proAudioRt.cpp
                        cbits/proteaaudio_binding.cpp
                        cbits/stb_vorbis.c

  Include-Dirs:         cbits cbits/include

  if os(windows)
    CC-Options:         "-D__WINDOWS_DS__"
    Extra-Libraries:    stdc++ ole32 dsound winmm
  if os(linux)
    CC-Options:         "-D__LINUX_ALSA__ -D__LINUX_PULSE__ -D__LINUX_OSS__"
    Extra-Libraries:    stdc++ pthread asound
  if os(darwin)
    CC-Options:         "-D__MACOSX_CORE__"
    Extra-Libraries:    stdc++ pthread
    Frameworks:         CoreFoundation CoreAudio

  ghc-options: -O2
