Name:                proteaaudio
Version:             0.6.5
Synopsis:            Simple audio library for Windows, Linux, OSX.
Description:         Simple audio library for Windows, Linux, OSX. Supports Ogg and Wav playback and multichannel mixing.
License:             BSD3
License-file:        LICENSE
Author:              Csaba Hruska
Maintainer:          csaba.hruska@gmail.com
Stability:           Experimental
Category:            Sound
Tested-With:         GHC == 7.10.3
Cabal-Version:       >= 1.10
Build-Type:          Simple

Extra-Source-Files:
  cbits/include/asio.cpp
  cbits/include/asio.h
  cbits/include/asiodrivers.cpp
  cbits/include/asiodrivers.h
  cbits/include/asiodrvr.h
  cbits/include/asiolist.cpp
  cbits/include/asiolist.h
  cbits/include/asiosys.h
  cbits/include/dsound.h
  cbits/include/ginclude.h
  cbits/include/iasiodrv.h
  cbits/include/iasiothiscallresolver.cpp
  cbits/include/iasiothiscallresolver.h
  cbits/include/soundcard.h
  cbits/RtAudio.cpp
  cbits/RtAudio.h
  cbits/RtError.h
  cbits/proAudio.cpp
  cbits/proAudio.h
  cbits/proAudioRt.cpp
  cbits/proAudioRt.h
  cbits/proteaaudio_binding.cpp
  cbits/proteaaudio_binding.h
  cbits/stb_vorbis.c

  Sound/ProteaAudio.chs

  example/play.hs

Flag example
  Description: Build with example
  Default: False

source-repository head
  type:     git
  location: https://github.com/csabahruska/proteaaudio

Library
  Build-Depends:        base >= 4 && < 5
  default-language:     Haskell2010

  Build-tools:          c2hs
  Exposed-Modules:      Sound.ProteaAudio
  Hs-Source-Dirs:       .

  C-Sources:            cbits/RtAudio.cpp
                        cbits/proAudio.cpp
                        cbits/proAudioRt.cpp
                        cbits/proteaaudio_binding.cpp
                        cbits/stb_vorbis.c

  Include-Dirs:         cbits cbits/include

  if os(windows)
    CC-Options:         "-D__WINDOWS_DS__"
    Extra-Libraries:    stdc++ ole32 dsound winmm
  if os(linux)
    CC-Options:         "-D__LINUX_ALSA__ -D__LINUX_PULSE__ -D__LINUX_OSS__"
    Extra-Libraries:    stdc++ pthread asound
  if os(darwin)
    CC-Options:         "-D__MACOSX_CORE__"
    Extra-Libraries:    stdc++ pthread
    Frameworks:         CoreFoundation CoreAudio

  ghc-options: -O2

executable proteaaudio-play
  if flag(example)
    Buildable: True
  else
    Buildable: False

  hs-source-dirs:   example
  main-is:          play.hs
  default-language: Haskell2010

  build-depends:
    base >= 4 && < 5,
    filepath >=1.4 && <1.5,
    bytestring == 0.10.*,
    proteaaudio
