Name:                proteaaudio-sdl
Version:             0.8.1
Synopsis:            Simple audio library for SDL.
Description:         Simple audio library for SDL. Supports PCM, Ogg and Wav playback and multichannel mixing.
License:             BSD3
License-file:        LICENSE
Author:              Csaba Hruska, Michael Karg
Maintainer:          csaba.hruska@gmail.com
Stability:           Experimental
Category:            Sound
Tested-With:         GHC == 8.4.4
Cabal-Version:       >= 1.10
Build-Type:          Simple

Extra-Source-Files:
  cbits/include/asio.cpp
  cbits/include/asio.h
  cbits/include/asiodrivers.cpp
  cbits/include/asiodrivers.h
  cbits/include/asiodrvr.h
  cbits/include/asiolist.cpp
  cbits/include/asiolist.h
  cbits/include/asiosys.h
  cbits/include/dsound.h
  cbits/include/ginclude.h
  cbits/include/iasiodrv.h
  cbits/include/iasiothiscallresolver.cpp
  cbits/include/iasiothiscallresolver.h
  cbits/include/soundcard.h
  cbits/proAudio.cpp
  cbits/proAudio.h
  cbits/proAudioSdl.cpp
  cbits/proAudioSdl.h
  cbits/proteaaudio_binding.cpp
  cbits/proteaaudio_binding.h
  cbits/stb_vorbis.c

  Sound/ProteaAudio/SDL.chs

  example/play.hs

  README.md
  CHANGELOG.md

Flag example
  Description: Build with example
  Default: False

source-repository head
  type:     git
  location: https://github.com/csabahruska/proteaaudio

Library
  Build-Depends:        base >= 4 && < 5,
                        bytestring == 0.10.*

  default-language:     Haskell2010

  Build-tools:          c2hs
  Exposed-Modules:      Sound.ProteaAudio.SDL
  Hs-Source-Dirs:       .

  C-Sources:            cbits/proAudio.cpp
                        cbits/proAudioSdl.cpp
                        cbits/proteaaudio_binding.cpp
                        cbits/stb_vorbis.c

  Include-Dirs:         cbits cbits/include

  Includes:             SDL.h
    
  Extra-Libraries:      SDL2

  pkgconfig-depends:    sdl2 >= 2.0.6


executable proteaaudio-play
  if flag(example)
    Buildable: True
  else
    Buildable: False

  hs-source-dirs:   example
  main-is:          play.hs
  default-language: Haskell2010

  build-depends:
    base >= 4 && < 5,
    filepath >=1.4 && <2,
    bytestring == 0.10.*,
    proteaaudio-sdl
