Cabal-Version:       2.2
Name:                proteaaudio-sdl
Version:             0.9.1
Synopsis:            Simple audio library for SDL.
Description:         Simple audio library for SDL. Supports PCM, Ogg and Wav playback and multichannel mixing.
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Csaba Hruska, Michael Karg
Maintainer:          csaba.hruska@gmail.com
Stability:           Experimental
Category:            Sound
Tested-With:         GHC == 8.8.3
Build-Type:          Simple

Extra-Source-Files:
  cbits/proAudio.cpp
  cbits/proAudio.h
  cbits/proAudioSdl.cpp
  cbits/proAudioSdl.h
  cbits/proteaaudio_binding.cpp
  cbits/proteaaudio_binding.h
  cbits/stb_vorbis.c

  Sound/ProteaAudio/SDL.chs

  example/play.hs

  README.md
  CHANGELOG.md
  stack.yaml

Flag example
  Description: Build with example
  Default: False

source-repository head
  type:     git
  location: https://github.com/csabahruska/proteaaudio

Library
  Build-Depends:        base >= 4 && < 5,
                        bytestring == 0.10.*

  default-language:     Haskell2010

  build-tool-depends:   c2hs:c2hs
  Exposed-Modules:      Sound.ProteaAudio.SDL
  Hs-Source-Dirs:       .

  CXX-Sources:          cbits/proAudio.cpp
                        cbits/proAudioSdl.cpp
                        cbits/proteaaudio_binding.cpp

  C-Sources:            cbits/stb_vorbis.c

  Include-Dirs:         cbits

  CXX-Options:          "-DPROTEAAUDIO_SDL"

  Includes:             SDL_audio.h

  Extra-Libraries:      SDL2 stdc++

  pkgconfig-depends:    sdl2 >= 2.0.4


executable proteaaudio-play-sdl
  if flag(example)
    Buildable: True
  else
    Buildable: False

  hs-source-dirs:   example
  main-is:          play.hs
  default-language: Haskell2010

  build-depends:
    base >= 4 && < 5,
    filepath >=1.4 && <2,
    bytestring == 0.10.*,
    proteaaudio-sdl
