Cabal-Version:       2.2
Name:                proteaaudio
Version:             0.10.0
Synopsis:            Simple audio library for Windows, Linux, OSX.
Description:         Simple audio library for Windows, Linux, OSX. Supports PCM, Ogg, Mp3 and Wav playback and multichannel mixing.
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Csaba Hruska
Maintainer:          csaba.hruska@gmail.com
Stability:           Experimental
Category:            Sound
Tested-With:         GHC == 8.8.3
Build-Type:          Simple

Extra-Source-Files:
  cbits/include/asio.cpp
  cbits/include/asio.h
  cbits/include/asiodrivers.cpp
  cbits/include/asiodrivers.h
  cbits/include/asiodrvr.h
  cbits/include/asiolist.cpp
  cbits/include/asiolist.h
  cbits/include/asiosys.h
  cbits/include/dsound.h
  cbits/include/ginclude.h
  cbits/include/iasiodrv.h
  cbits/include/iasiothiscallresolver.cpp
  cbits/include/iasiothiscallresolver.h
  cbits/include/soundcard.h
  cbits/RtAudio.cpp
  cbits/RtAudio.h
  cbits/proAudio.cpp
  cbits/proAudio.h
  cbits/proAudioRt.cpp
  cbits/proAudioRt.h
  cbits/proteaaudio_binding.cpp
  cbits/proteaaudio_binding.h
  cbits/stb_vorbis.c
  cbits/minimp3_ex.h
  cbits/minimp3.h

  Sound/ProteaAudio.chs

  example/play.hs

  README.md
  CHANGELOG.md
  stack.yaml

Flag example
  Description: Build with example
  Default: False

source-repository head
  type:     git
  location: https://github.com/csabahruska/proteaaudio

Library
  Build-Depends:        base >= 4 && < 5,
                        bytestring >=0.10 && <0.12,

  default-language:     Haskell2010

  build-tool-depends:   c2hs:c2hs
  Exposed-Modules:      Sound.ProteaAudio
  Hs-Source-Dirs:       .

  CXX-Sources:          cbits/RtAudio.cpp
                        cbits/proAudio.cpp
                        cbits/proAudioRt.cpp
                        cbits/proteaaudio_binding.cpp

  C-Sources:            cbits/stb_vorbis.c

  Include-Dirs:         cbits cbits/include

  CXX-Options:          "-DPROTEAAUDIO_RT"

  if impl(ghc >= 9.4)
    build-depends:      system-cxx-std-lib
  else
    if os(windows)
      extra-libraries:  stdc++
    if os(linux)
      extra-libraries:  stdc++
    if os(darwin)
      extra-libraries:  stdc++

  if os(windows)
    CXX-Options:        "-D__WINDOWS_DS__"
    Extra-Libraries:    ole32 dsound winmm
  if os(linux)
    CXX-Options:        "-D__LINUX_PULSE__"
    Extra-Libraries:    pthread pulse-simple pulse
    pkgconfig-depends:  libpulse-simple, libpulse
  if os(darwin)
    CXX-Options:        "-D__MACOSX_CORE__"
    Extra-Libraries:    pthread
    Frameworks:         CoreFoundation CoreAudio

executable proteaaudio-play
  if flag(example)
    Buildable: True
  else
    Buildable: False

  hs-source-dirs:   example
  main-is:          play.hs
  default-language: Haskell2010

  build-depends:
    base >= 4 && < 5,
    filepath >=1.4 && <2,
    bytestring >=0.10 && <0.12,
    proteaaudio
